[package]
name = "iuliia-rust"
version = "0.1.0"
authors = ["Kilin Maksim <maximk@hflabs.ru>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
serde = { version = "1.0", features = ["derive"] }
include_dir = "0.6.0"
serde_json = "1.0"
regex = "1"
lazy_static = "1.4.0"