[package]
name = "iuliia-rust"
version = "0.1.2"
authors = ["Kilin Maksim <https://github.com/massita99>"]
edition = "2018"
license = "MIT"
homepage = "https://github.com/massita99/iuliia-rust"
repository = "https://github.com/massita99/iuliia-rust"
readme = "README.md"
description = """
Transliterate Cyrillic → Latin in every possible way https://dangry.ru/iuliia/
"""

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
serde = { version = "1.0", features = ["derive"] }
include_dir = "0.6.0"
serde_json = "1.0"
regex = "1"
lazy_static = "1.4.0"